fix: sticky games-links with overflow

--- a/src/pages/vocab/vocab.scss
+++ b/src/pages/vocab/vocab.scss
@@ -42,10 +42,8 @@
 
 .content {
   position: relative;
-  overflow: hidden;
 }
 .vocab {
-  
   &__header {
     display: flex;
     justify-content: flex-start;
